<resources>
    <string name="detail_name">Name</string>
    <string name="detail_tags">Tags</string>
    <string name="detail_country">Country</string>
    <string name="detail_create_shortcut">Add to home screen</string>
    <string name="detail_shortcut_requested">Requesting to add shortcut to home screen</string>
    <string name="error_creating_shortcut">Failed to create shortcut</string>
    <string name="detail_language">Language</string>
    <string name="detail_weblink">Weblink</string>
    <string name="detail_visit_website">@string/action_station_visit_website</string>
    <string name="detail_play">Play</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_stop">Stop</string>
    <string name="detail_share">Share</string>
    <string name="detail_play_in_radiodroid">Play in RadioDroid</string>
    <string name="action_links">Links</string>
    <string name="action_homepage">Homepage</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_alarm">Alarm</string>
    <string name="action_station_visit_website">Visit Website</string>
    <string name="action_station_copy_stream_url">Copy Stream URL</string>
    <string name="action_station_share">Share</string>
    <string name="action_local">Local</string>
    <string name="action_skip_to_next">Next</string>
    <string name="action_pause">Pause</string>
    <string name="action_skip_to_previous">Previous</string>
    <string name="action_resume">Resume</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_retry">Retry</string>
    <string name="action_delete_history">Delete history</string>
    <string name="action_delete_favorites">Delete favorites</string>
    <string name="action_delete_stream_history">Clear track history</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_top_click">Top Click</string>
    <string name="action_toggle_view">Toggle view</string>
    <string name="action_top_vote">Top Vote</string>
    <string name="action_changed_lately">Changed Lately</string>
    <string name="action_currently_playing">Currently Playing</string>
    <string name="action_tags">Tags</string>
    <string name="action_countries">Countries/Regions</string>
    <string name="action_languages">Languages</string>
    <string name="action_edit">Edit</string>
    <string name="action_lyrics">Lyrics</string>
    <string name="action_copy_info">Copy Info</string>
    <string name="error_station_load">Could not connect to station</string>
    <string name="error_list_update">Could not connect to radio browser server</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="share_action">Share station link with..</string>
    <string name="nav_item_stations">Stations</string>
    <string name="nav_item_starred">Favorites</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_multi_search">Multi Criteria Search</string>
    <string name="nav_item_alarm">Alarm</string>
    <string name="about_text">This app uses the free radio station directory at\nhttps://www.radio-browser.info\nEveryone can add stations to it. It works like a wiki for online (streaming) radio stations.\n\nContact:\nsegler_alex@web.de\n\nBugtracker:\nhttps://github.com/segler-alex/RadioDroid/issues\n\nIf you like the software and want to help, feel free to send me an email. I really need someone with graphical experience to make the app nicer to the eye :) Maybe someone who can draw icons, images...but also programmers who fix bugs, or implement new ones (features not bugs ;)\nAlso ideas for new features are always appreciated!\n\nThis app is free software licensed under the GPLv3.\nhttps://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_version">Version: %1$s</string>
    <string name="about_fork_description">Fork RadioDroid by xueshi86</string>
    <string name="about_github">GitHub: https://github.com/xueshi86/RadioDroid</string>
    <string name="detail_star">Add to favorites</string>
    <string name="detail_unstar">Delete from favorites</string>
    <string name="detail_play_in_external_player">@string/action_play_in_external</string>
    <string name="progress_loading">Loading...</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_track">Unknown Track</string>
    <string name="unknown_station">Unknown Station</string>
    <string name="unknown">Unknown</string>
    <string name="now_playing_accessibility">Now playing: %1$s by %2$s</string>
    <string name="now_playing_artist_unknown">Now playing: %s, artist unknown</string>
    <string name="now_playing_track_unknown">Now playing song by %s, track name unknown</string>
    <string name="now_playing_all_unknown">Now playing music, artist and track unknown</string>
    <string name="now_playing_stream">Now playing: %s</string>
    <string name="sleep_timer" formatted="true">Sleep timer: %1$02d:%2$02d</string>
    <string name="sleep_timer_title">Stop playing after the selected minute</string>
    <string name="sleep_timer_set_title">Set Sleep Timer (minutes)</string>
    <string name="sleep_timer_minutes_label">minutes</string>
    <string name="sleep_timer_hint">Enter minutes between 1 and 99</string>
    <string name="sleep_timer_apply">Apply</string>
    <string name="sleep_timer_clear">Clear</string>
    <string name="nav_item_add_sleep">Sleep timer</string>
    <string name="action_random_play">Random play</string>
    <string name="nav_item_save_playlist">Export favorites as playlist</string>
    <string name="nav_item_load_playlist">Import favorites from playlist</string>
    <string name="nav_item_save_history_playlist">Export history as playlist</string>
    <string name="confirm_overwrite_file">Overwrite the file?</string>
    <string name="dialog_hint_file_name">Enter file name</string>
    <string name="error_empty_field">This field is required</string>
    <string name="error_invalid_file_name">Invalid file name</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_overwrite">Overwrite</string>
    <string name="notify_load_playlist_nok">Could not import from %1$s&#47;%2$s</string>
    <string name="notify_load_playlist_now">Importing from %1$s&#47;%2$s, please wait.</string>
    <string name="notify_load_playlist_ok">Imported %1$d stations from %2$s&#47;%3$s</string>
    <string name="notify_save_playlist_nok">Could not export to %1$s&#47;%2$s</string>
    <string name="notify_save_playlist_now">Exporting to %1$s&#47;%2$s, please wait.</string>
    <string name="notify_save_playlist_ok">Exported to %1$s&#47;%2$s successfully</string>
    <string name="export_type_file">File</string>
    <string name="notify_sync_list_deleted_entries">%1$d of %2$d local stations in the list marked non-existent on the server</string>
    <string name="searchpreference_clear_history">Clear history</string>
    <string name="searchpreference_no_results">No results</string>
    <string name="searchpreference_search">Search…</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_local_database_update">Local Database Update</string>
    <string name="settings_update_local_database">Update Local Database</string>
    <string name="settings_update_local_database_desc">Download all radio stations from network and store them locally</string>
    <string name="settings_incremental_update">Incremental Update</string>
    <string name="settings_incremental_update_desc">Fetch only stations changed since last sync (fast, low traffic)</string>
    <string name="settings_auto_incremental_update">Auto incremental update</string>
    <string name="settings_auto_incremental_update_on">When the app starts, automatically sync changes if the last update was over 24 hours ago</string>
    <string name="settings_auto_incremental_update_off">No automatic updates; tap \"Incremental Update\" above to sync manually</string>
    <string name="settings_auto_incremental_wifi_only">Incremental update Wi-Fi only</string>
    <string name="settings_auto_incremental_wifi_only_on">Only auto-sync on Wi-Fi</string>
    <string name="settings_auto_incremental_wifi_only_off">Allow auto-sync on mobile data</string>
    <string name="settings_check_network_connection">Check Network Connection</string>
    <string name="settings_check_network_connection_desc">Test connection to radio browser server</string>
    <string name="settings_local_database_status">Local Database Status</string>
    <string name="settings_local_database_status_default">Not updated yet</string>
    <string name="settings_local_database_status_success">Last updated: %1$s\nLocal station count: %2$d\nRemote station count: %3$d</string>
    <string name="webdav_server_url">Server address</string>
    <string name="webdav_directory">Server directory (optional; created automatically if missing)</string>
    <string name="webdav_username">Username</string>
    <string name="webdav_password">Password</string>
    <string name="webdav_http_warning">HTTP transmits credentials unencrypted; HTTPS is recommended</string>
    <string name="empty_database_message">Local database is empty, please update the local database in settings first</string>
    <string name="empty_database_title">Local Database is Empty</string>
    <string name="empty_database_button">Update Local Database</string>
    <string name="empty_database_icon_desc">Empty database icon</string>
    <string name="description_btn_setup_alarm">Set alarm</string>
    <string name="context_menu_share">@string/detail_share</string>
    <string name="context_menu_visit_homepage">@string/action_station_visit_website</string>
    <string name="context_menu_play_in_radiodroid">@string/detail_play_in_radiodroid</string>
    <string name="context_menu_play_in_external_player">@string/action_play_in_external</string>
    <string name="context_menu_add_alarm">@string/action_alarm</string>
    <string name="context_menu_create_shortcut">@string/detail_create_shortcut</string>
    <string name="context_menu_delete">@string/action_delete</string>
    <string name="context_menu_refresh_icon">Refresh icon</string>
    <string name="detail_buffer_settings">Buffer strategy</string>
    <string name="detail_equalizer_settings">Equalizer settings</string>
    <string name="buffer_settings_apply">Apply</string>
    <string name="buffer_strategy_title">Buffer Strategy</string>
    <string name="buffer_strategy_light">Light Buffer</string>
    <string name="buffer_strategy_light_desc">Plays after 2.5s buffering, suitable for stable networks, default option</string>
    <string name="buffer_strategy_enhanced">Enhanced Buffer</string>
    <string name="buffer_strategy_enhanced_desc">Plays after 10s buffering, suitable for occasionally unstable networks</string>
    <string name="buffer_strategy_extreme">Extreme Buffer</string>
    <string name="buffer_strategy_extreme_desc">Plays after 30s buffering, suitable for moderately unstable networks; if still interrupted, consider using a proxy</string>
    <string name="webdav_restore_favourites_confirm">Restoring favourites will use the favourites file stored on the server.\n\n• Overwrite: the local list will match the server exactly; stations that only exist locally will be removed.\n• Merge: keep all local stations and add stations that only exist on the server.\n\nA copy of your current favourites is saved on this device before the operation.</string>
    <string name="webdav_restore_overwrite">Overwrite</string>
    <string name="webdav_restore_merge">Merge</string>
</resources>