<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_play_in_radiodroid"
        android:title="@string/context_menu_play_in_radiodroid"
        android:icon="@drawable/ic_play_in_radiodroid_24dp" />
    <item
        android:id="@+id/menu_play_in_external_player"
        android:title="@string/context_menu_play_in_external_player"
        android:icon="@drawable/ic_play_arrow_24dp" />
    <item
        android:id="@+id/menu_visit_homepage"
        android:title="@string/context_menu_visit_homepage"
        android:icon="@drawable/ic_store_black_24dp" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/context_menu_share"
        android:icon="@drawable/ic_share_24dp" />
    <item
        android:id="@+id/menu_add_alarm"
        android:title="@string/context_menu_add_alarm"
        android:icon="@drawable/ic_add_alarm_black_24dp" />
    <item
        android:id="@+id/menu_create_shortcut"
        android:title="@string/context_menu_create_shortcut"
        android:icon="@drawable/ic_back_arrow_24dp" />
    <item
        android:id="@+id/menu_delete"
        android:title="@string/context_menu_delete"
        android:icon="@drawable/ic_delete_black_24dp" />
</menu>