<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!--android:visibility="gone">-->

    <net.programmierecke.radiodroid2.views.TagsView
            android:id="@+id/viewTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:tagBackgroundColor="?attr/tagBackgroundColor"
            app:tagHeight="25sp"
            app:textHorizontalPadding="8dp"
            app:textVerticalMargin="4dp" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

        <com.mikepenz.iconics.view.IconicsImageButton
                android:id="@+id/buttonVisitWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="36dp"
                android:minHeight="36dp"
                android:padding="4dp"
                android:contentDescription="@string/detail_visit_website"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="?attr/iconsInItemBackgroundColor"
                app:iiv_icon="gmd-home"
                app:iiv_padding="2dp"
                app:iiv_size="24dp"/>

        <ImageButton
            android:id="@+id/buttonShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:padding="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/detail_share"
            app:srcCompat="@drawable/ic_share_24dp"
            app:tint="?attr/iconsInItemBackgroundColor" />

        <ImageButton
                android:id="@+id/buttonBookmark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="36dp"
                android:minHeight="36dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/detail_star"
                app:tint="?attr/iconsInItemBackgroundColor"
                app:srcCompat="@drawable/ic_star_border_black_24dp" />

        <ImageButton
                android:id="@+id/buttonAddAlarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="36dp"
                android:minHeight="36dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_btn_setup_alarm"
                app:tint="?attr/iconsInItemBackgroundColor"
                app:srcCompat="@drawable/ic_add_alarm_black_24dp" />

        <ImageButton
                android:id="@+id/buttonBufferSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="36dp"
                android:minHeight="36dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/detail_buffer_settings"
                app:tint="?attr/iconsInItemBackgroundColor"
                app:srcCompat="@drawable/ic_buffer_settings_24dp" />

        <ImageButton
                android:id="@+id/buttonEqualizerSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="36dp"
                android:minHeight="36dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/detail_equalizer_settings"
                app:tint="?attr/iconsInItemBackgroundColor"
                app:srcCompat="@drawable/ic_equalizer_24dp" />

        <ImageButton
            android:id="@+id/buttonPlayInRadioDroid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:padding="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/detail_play_in_radiodroid"
            app:tint="?attr/iconsInItemBackgroundColor"
            app:srcCompat="@drawable/ic_play_in_radiodroid" />

        <ImageButton
                android:id="@+id/buttonRefreshIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="36dp"
                android:minHeight="36dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/context_menu_refresh_icon"
                app:tint="?attr/iconsInItemBackgroundColor"
                app:srcCompat="@drawable/ic_refresh_black_24dp" />
    </LinearLayout>

</LinearLayout>
