<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/sleep_timer_set_title"
        android:textSize="@dimen/text_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/timerInputEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:gravity="center"
            android:textSize="@dimen/text_headline"
            android:hint="1-99"
            android:background="@android:drawable/edit_text"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sleep_timer_minutes_label"
            android:textSize="@dimen/text_title" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/sleep_timer_hint"
        android:textSize="@dimen/text_body"
        android:textColor="?android:attr/textColorSecondary" />

</LinearLayout>